# Perceptron-fromscratch

./: .gitignore  README.md  logisticRegression.py  pyproject.toml
assignment2_neuralnetworks/: LinearSVM.py  Weston-WatkinsSVM.py  WidrowHoff.py  classifier_wrapper.py  generate_binary_data.py  test_binary_models.py  test_ww_svm.py  widrow_hoff.py
assignment2_neuralnetworks/models/: __init__.py  linear_svm.py  logistic_regression.py  weston_watkins_svm.py  widrow_hoff.py
cv_results/: cv_results_breast_cancer.csv  cv_results_iris.csv  cv_results_titanic.csv  cv_results_ww_svm.csv
docs/: wwSVMtestData.csv
notebook/: inspect_results.ipynb
test/: test_widrow_hoff.py
tests/: cases.py  test_binary_models.py  test_widrow_hoff.py  test_ww_svm.py
