[tool.poetry]
name = "assignment2-neuralnetworks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
matplotlib = "*"
seaborn = "*"
scikit-learn = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
